card component fix title and scroll bar invisible

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
-body{
+body {
   background-color: #13131a;
   margin: 0;
+}
+
+::-webkit-scrollbar {
+  width: 1em;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #13131a;
+  outline: 1px solid #13131a;
 }
